--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Practice problems for JavaScript Fundamentals",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha test/ --reporter dot --require mocha-clean",
-    "testPrototypes": "./node_modules/mocha/bin/mocha test/prototype-test.js --reporter dot --require mocha-clean",
-    "testScope": "./node_modules/mocha/bin/mocha test/scope-test.js --reporter dot --require mocha-clean"
+    "test": "node ./node_modules/mocha/bin/mocha test/ --reporter dot --require mocha-clean",
+    "testPrototypes": "node ./node_modules/mocha/bin/mocha test/prototype-test.js --reporter dot --require mocha-clean",
+    "testScope": "node ./node_modules/mocha/bin/mocha test/scope-test.js --reporter dot --require mocha-clean"
   },
   "keywords": [
     "js"
@@ -15,7 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^8.2.1",
+    "mocha": "^10.4.0",
     "mocha-clean": "^1.0.0"
   }
 }
